Authentication is done

--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,2 @@
 PORT=8080
-MONGO_URI=mongodb+srv://werfit:Ji271257@expense-tracker.9pmf2.mongodb.net/expense-tracker?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://werfit:Ji271257@expense-tracker.3msmn.mongodb.net/expense-tracker?retryWrites=true&w=majority
