--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.3"
+    "mongoose": "^5.10.3",
+    "react-token-auth": "^1.1.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
